--- a/projects/2ptstat-analysis/assignments/assignment1_DarshakPatel.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment1_DarshakPatel.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noisy_data_set1=np.random.multivariate_normal()\n",
+    "noisy_data_set1=np.random.multivariate_normal(mean= cov=cov, size=10000)\n",
     "noisy_data_set2 = ..."
    ]
   },
