--- a/projects/2ptstat-analysis/assignments/assignment1_DarshakPatel.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment1_DarshakPatel.ipynb
@@ -1075,13 +1075,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a)\n",
+    "a) The minimum number of data vectors such that the inverse covariance matrix is non-singular would depend on the dimentionality of the original data vector. In the case of the model we've been using in this assignment the minimum number of data vectors required would be atleast 900 or greater (preferably greater).\n",
     "\n",
-    "b)\n",
+    "b) An easy tool to test whether a matrix is non-singular or not would be to calcualte its determinant. If a matrix is non-singular this means that the determinant is non-zero. \n",
     "\n",
-    "c)\n",
-    "\n",
-    "d)"
+    "c) An analytical covariance matrix is not alwasy invertible. We could make it invertible, for example by simply increasing the number of realizations we have so that n is much greater than the dimensionality. In our case n >> 900. Another method in doing this would be to reduce the dimensionality of the original data by getting rid of redundant or highly correlated varaibles. This method complements the previous method as depending on computing resources avabile it might be easier to achieve n >> D if D (the dimensionality) wasn't as high."
    ]
   },
   {
