--- a/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
@@ -55,15 +55,66 @@
     "## You can use any sampler you like to use for the following tasks. Also, you can use your own emulator. You must use the noisy reference model for the first three tasks. Check for each task that the posteriors and the $\\chi^2$ distributions are as expected.\n",
     "## Your tasks for this week are the following:\n",
     "\n",
-    "### 1. Run an MCMC where you vary all four parameters you have trained on your emulator.\n",
-    "### 2. Use the provided numerical covariance matrices with [1.5k,3k,10k] data vectors as in assignment one. Run an MCMC for all of them with and without Hartlap correction, and compare with your results. Link your results to assignment one.\n",
+    "### 1. Run an MCMC where you vary all four parameters you have trained on your emulator.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Use the provided numerical covariance matrices with [1.5k,3k,10k] data vectors as in assignment one. Run an MCMC for all of them with and without Hartlap correction, and compare with your results. Link your results to assignment one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Next, we consider PCA data compression. Run an MCMC for several numbers of PCA elements. Link your results to assignment two.\n",
     "####    3.a. Use the analytical covariance matrix.\n",
-    "####    3.b. Use the 1.5k covariance matrix. Do you observe the same trend as in 3.a?\n",
+    "####    3.b. Use the 1.5k covariance matrix. Do you observe the same trend as in 3.a?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4. Run task 3 with the noise-free reference model. What difference do you observe in the MCMC chain and the corresponding $\\chi^2$ distributions?\n",
     "#### 4.a Plot and compare the marginalised constraints on $\\Omega_\\mathrm{m}$ and $A_s$, as a function of the number of PCA elements. What do you observe?\n",
-    "#### 4.b To check if your answer in 4.a is robust, run multiple MCMC chains with the 1.5 covariance matrix and a fixed number of PCA elements. How big are the variations on the marginalised errors on $\\Omega_\\mathrm{m}$ and $A_s$? Is your answer in 4.a reliable? What can you improve to make 4.a reliable?\n",
-    "\n",
+    "#### 4.b To check if your answer in 4.a is robust, run multiple MCMC chains with the 1.5 covariance matrix and a fixed number of PCA elements. How big are the variations on the marginalised errors on $\\Omega_\\mathrm{m}$ and $A_s$? Is your answer in 4.a reliable? What can you improve to make 4.a reliable?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 5. Bonus: Use an MCMC sampler not described in the attached notebook. Compare its performance (speed, accuracy) to the samplers we provided.\n",
     "###"
    ]
