--- a/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\patel\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import random\n",
@@ -31,7 +22,8 @@
     "from cosmopower_NN import cosmopower_NN\n",
     "import tensorflow as tf\n",
     "import gc\n",
-    "\n",
+    "from getdist import plots, MCSamples, parampriors\n",
+    "import getdist\n",
     "import emcee"
    ]
   },
@@ -491,76 +483,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(900, 900)"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def run_and_save_hartlap_nohartlap_MCMC(inv_cov_num, save_names):\n",
+    "    sampler_hartlap = emcee.EnsembleSampler(nwalkers, ndim, calc_likelihood_hartlap, args=[inv_cov_num])\n",
+    "    sampler_hartlap.run_mcmc(p0, total_steps, progress=True)\n",
+    "\n",
+    "    samples_emcee_hartlap = sampler_hartlap.get_chain(discard=burning_steps,flat=True)\n",
+    "    np.save('data_4_assignment3/outputs_MCMC/MCMC_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_'+save_names[0], samples_emcee_hartlap)\n",
+    "    log_prob_samples_hartlap = sampler_hartlap.get_log_prob(discard=burning_steps, flat=True)\n",
+    "    np.save('data_4_assignment3/outputs_MCMC/logp_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_'+save_names[0], log_prob_samples_hartlap)\n",
+    "    \n",
+    "    sampler_nohartlap = emcee.EnsembleSampler(nwalkers, ndim, calc_likelihood_nohartlap, args=[inv_cov_num])\n",
+    "    sampler_nohartlap.run_mcmc(p0, total_steps, progress=True)\n",
+    "\n",
+    "    samples_emcee_nohartlap = sampler_nohartlap.get_chain(discard=burning_steps,flat=True)\n",
+    "    np.save('data_4_assignment3/outputs_MCMC/MCMC_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_'+save_names[1], samples_emcee_nohartlap)\n",
+    "    log_prob_samples_nohartlap = sampler_nohartlap.get_log_prob(discard=burning_steps, flat=True)\n",
+    "    np.save('data_4_assignment3/outputs_MCMC/logp_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_'+save_names[1], log_prob_samples_nohartlap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_and_save_mcmc_chain(mcmc_sampler, save_name, title):\n",
+    "    fig, axes = plt.subplots(ndim, figsize=(15, 10), sharex=True)\n",
+    "    samples = mcmc_sampler.get_chain()\n",
+    "    labels = param_names_varying #[\"m\", \"b\", \"log(f)\"]\n",
+    "    for i in range(ndim):\n",
+    "        ax = axes[i]\n",
+    "        ax.plot(samples[:, :, i], \"k\", alpha=0.3)\n",
+    "        ax.set_xlim(0, len(samples))\n",
+    "        ax.set_ylabel(labels[i])\n",
+    "        ax.yaxis.set_label_coords(-0.1, 0.5)\n",
+    "\n",
+    "    axes[-1].set_xlabel(\"step number\")\n",
+    "    plt.title(title)\n",
+    "\n",
+    "    plt.savefig('plots_4_assignment3/MCMC_chain_'+save_name+'.jpg',dpi=400, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_and_save_hartlap_corner(samples_emcee_hartlap, samples_emcee_nohartlap, save_name, labels):\n",
+    "\n",
+    "    para_names =np.array(['omega_m', 'omega_b', 'As', 'w'])#[[0,2]]\n",
+    "    param_names_latex = [r'$\\Omega_\\mathrm{m}$', r'$\\Omega_\\mathrm{b}$', r'$A_\\mathrm{s}$',r'$w$']\n",
+    "\n",
+    "    parameters = np.load('data_4_assignment2/parameters.npz')\n",
+    "    parameters.keys()\n",
+    "    para_priors = {}\n",
+    "    para_priors_low = {}\n",
+    "    para_priors_up = {}\n",
+    "    for name in para_names:\n",
+    "        para_priors[name] = [np.min(parameters[name]),np.max(parameters[name])]\n",
+    "        para_priors_low[name] = np.min(parameters[name])\n",
+    "        para_priors_up[name] = np.max(parameters[name])\n",
+    "\n",
+    "\n",
+    "    samples_getdist_hartlap = MCSamples(samples=samples_emcee_hartlap,names = para_names, ranges = para_priors, settings={'smooth_scale_2D': 0.3, 'smooth_scale_1D': 0.3})\n",
+    "    samples_getdist_nohartlap = MCSamples(samples=samples_emcee_nohartlap,names = para_names, ranges = para_priors, settings={'smooth_scale_2D': 0.3, 'smooth_scale_1D': 0.3})\n",
+    "\n",
+    "    colors = ['lightcoral', 'royalblue', 'orange']\n",
+    "    bright = ['#4477AA', '#EE6677', '#228833', '#CCBB44', '#66CCEE', '#AA3377', '#BBBBBB']\n",
+    "    retro = ['#4165c0', '#e770a2', '#5ac3be', '#696969', '#f79a1e', '#ba7dcd']\n",
+    "\n",
+    "    g = plots.get_subplot_plotter(width_inch=12)\n",
+    "    g.settings.axis_marker_lw = 1.0\n",
+    "    g.settings.axis_marker_ls = '-'\n",
+    "    g.settings.title_limit_labels = False\n",
+    "    g.settings.axis_marker_color = 'k'\n",
+    "    g.settings.legend_colored_text = True\n",
+    "    g.settings.figure_legend_frame = False\n",
+    "    g.settings.linewidth = 2.0\n",
+    "    g.settings.linewidth_contour = 3.0\n",
+    "    g.settings.legend_fontsize = 22\n",
+    "    g.settings.axes_fontsize = 17\n",
+    "    g.settings.axes_labelsize = 22\n",
+    "    g.settings.axis_tick_x_rotation = 45\n",
+    "    g.settings.axis_tick_max_labels = 6\n",
+    "    g.settings.solid_colors = retro\n",
+    "\n",
+    "    priors = parampriors.ParamBounds()\n",
+    "    # priors.names = para_names\n",
+    "    # priors.lower = para_priors_low\n",
+    "    # priors.upper = para_priors_up\n",
+    "\n",
+    "    g.triangle_plot(\n",
+    "        roots=[samples_getdist_hartlap,samples_getdist_nohartlap],\n",
+    "        filled=True,\n",
+    "        legend_loc='upper right',\n",
+    "        legend_labels = labels,\n",
+    "        title_limit=1,\n",
+    "        # upper_roots=[1,2,0],\n",
+    "        # param_limits=para_priors,\n",
+    "        markers=reference_params,\n",
+    "    )\n",
+    "\n",
+    "    #plt.title('1.5k')\n",
+    "    plt.savefig('plots_4_assignment3/MCMC_corner_'+save_name+'.jpg',dpi=400, bbox_inches='tight')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "p0 = start_position_lh_and_step_size(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [01:29<00:00, 11.13it/s]\n"
+      "100%|██████████| 1000/1000 [01:29<00:00, 11.16it/s]\n",
+      "100%|██████████| 1000/1000 [01:16<00:00, 12.99it/s]\n"
      ]
     }
    ],
    "source": [
-    "sampler_hartlap = emcee.EnsembleSampler(nwalkers, ndim, calc_likelihood_hartlap, args=[inv_cov_num_1500])\n",
-    "sampler_hartlap.run_mcmc(p0, total_steps, progress=True)\n",
-    "\n",
-    "samples_emcee_hartlap = sampler_hartlap.get_chain(discard=burning_steps,flat=True)\n",
-    "np.save('data_4_assignment3/outputs_MCMC/MCMC_s1000_burn100_walk10_emcee_numcov1500_hartlap',samples_emcee_hartlap)\n",
-    "log_prob_samples_hartlap = sampler_hartlap.get_log_prob(discard=burning_steps, flat=True)\n",
-    "np.save('data_4_assignment3/outputs_MCMC/logp_s1000_burn100_walk10_emcee_numcov1500_hartlap',log_prob_samples_hartlap)\n",
-    "\n"
+    "run_and_save_hartlap_nohartlap_MCMC(inv_cov_num_1500, ['numcov1500_hartlap', 'numcov1500_nohartlap'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [01:09<00:00, 14.32it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sampler_nohartlap = emcee.EnsembleSampler(nwalkers, ndim, calc_likelihood_nohartlap, args=[inv_cov_num_1500])\n",
-    "sampler_nohartlap.run_mcmc(p0, total_steps, progress=True)\n",
-    "\n",
-    "samples_emcee_nohartlap = sampler_nohartlap.get_chain(discard=burning_steps,flat=True)\n",
-    "np.save('data_4_assignment3/outputs_MCMC/MCMC_s1000_burn100_walk10_emcee_numcov1500_nohartlap',samples_emcee_nohartlap)\n",
-    "log_prob_samples_nohartlap = sampler_nohartlap.get_log_prob(discard=burning_steps, flat=True)\n",
-    "np.save('data_4_assignment3/outputs_MCMC/logp_s1000_burn100_walk10_emcee_numcov1500_nohartlap',log_prob_samples_nohartlap)\n",
+    "plot_and_save_mcmc_chain()\n",
+    "# numcov1500_hartlap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#task2_1500covnum\n",
     "\n"
    ]
   },
@@ -570,95 +646,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, axes = plt.subplots(ndim, figsize=(15, 10), sharex=True)\n",
-    "# samples = sampler.get_chain()\n",
-    "# labels = param_names_varying #[\"m\", \"b\", \"log(f)\"]\n",
-    "# for i in range(ndim):\n",
-    "#     ax = axes[i]\n",
-    "#     ax.plot(samples[:, :, i], \"k\", alpha=0.3)\n",
-    "#     ax.set_xlim(0, len(samples))\n",
-    "#     ax.set_ylabel(labels[i])\n",
-    "#     ax.yaxis.set_label_coords(-0.1, 0.5)\n",
-    "\n",
-    "# axes[-1].set_xlabel(\"step number\")\n",
-    "\n",
-    "# plt.savefig('plots_4_assignment3/MCMC_chain_task2p1.jpg',dpi=400, bbox_inches='tight')"
+    "# ['1.5k w/ Hartlap','1.5k w/out Hartlap']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed no burn in\n",
-      "Removed no burn in\n"
+      "w = -1.084\\pm 0.014\n"
      ]
     }
    ],
    "source": [
-    "from getdist import plots, MCSamples, parampriors\n",
-    "import getdist\n",
-    "\n",
-    "\n",
-    "para_names =np.array(['omega_m', 'omega_b', 'As', 'w'])#[[0,2]]\n",
-    "param_names_latex = [r'$\\Omega_\\mathrm{m}$', r'$\\Omega_\\mathrm{b}$', r'$A_\\mathrm{s}$',r'$w$']\n",
-    "\n",
-    "parameters = np.load('data_4_assignment2/parameters.npz')\n",
-    "parameters.keys()\n",
-    "para_priors = {}\n",
-    "para_priors_low = {}\n",
-    "para_priors_up = {}\n",
-    "for name in para_names:\n",
-    "    para_priors[name] = [np.min(parameters[name]),np.max(parameters[name])]\n",
-    "    para_priors_low[name] = np.min(parameters[name])\n",
-    "    para_priors_up[name] = np.max(parameters[name])\n",
-    "\n",
-    "\n",
-    "samples_getdist_hartlap = MCSamples(samples=samples_emcee_hartlap,names = para_names, ranges = para_priors, settings={'smooth_scale_2D': 0.3, 'smooth_scale_1D': 0.3})\n",
-    "samples_getdist_nohartlap = MCSamples(samples=samples_emcee_nohartlap,names = para_names, ranges = para_priors, settings={'smooth_scale_2D': 0.3, 'smooth_scale_1D': 0.3})\n",
-    "\n",
-    "colors = ['lightcoral', 'royalblue', 'orange']\n",
-    "bright = ['#4477AA', '#EE6677', '#228833', '#CCBB44', '#66CCEE', '#AA3377', '#BBBBBB']\n",
-    "retro = ['#4165c0', '#e770a2', '#5ac3be', '#696969', '#f79a1e', '#ba7dcd']\n",
-    "\n",
-    "g = plots.get_subplot_plotter(width_inch=12)\n",
-    "g.settings.axis_marker_lw = 1.0\n",
-    "g.settings.axis_marker_ls = '-'\n",
-    "g.settings.title_limit_labels = False\n",
-    "g.settings.axis_marker_color = 'k'\n",
-    "g.settings.legend_colored_text = True\n",
-    "g.settings.figure_legend_frame = False\n",
-    "g.settings.linewidth = 2.0\n",
-    "g.settings.linewidth_contour = 3.0\n",
-    "g.settings.legend_fontsize = 22\n",
-    "g.settings.axes_fontsize = 17\n",
-    "g.settings.axes_labelsize = 22\n",
-    "g.settings.axis_tick_x_rotation = 45\n",
-    "g.settings.axis_tick_max_labels = 6\n",
-    "g.settings.solid_colors = retro\n",
-    "\n",
-    "priors = parampriors.ParamBounds()\n",
-    "# priors.names = para_names\n",
-    "# priors.lower = para_priors_low\n",
-    "# priors.upper = para_priors_up\n",
-    "\n",
-    "g.triangle_plot(\n",
-    "    roots=[samples_getdist_hartlap,samples_getdist_nohartlap],\n",
-    "    filled=True,\n",
-    "    legend_loc='upper right',\n",
-    "    legend_labels = ['1.5k w/ Hartlap','1.5k w/out Hartlap'],\n",
-    "    title_limit=1,\n",
-    "    # upper_roots=[1,2,0],\n",
-    "    # param_limits=para_priors,\n",
-    "    markers=reference_params,\n",
-    ")\n",
-    "\n",
-    "#plt.title('1.5k')\n",
-    "plt.savefig('plots_4_assignment3/MCMC_corner_task2p1.jpg',dpi=400, bbox_inches='tight')\n"
+    "print(samples_getdist_hartlap.getInlineLatex('w',limit=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color:red\"> Make a table summarizing the parameter constraints found for each numerical cov and for hartlap vs. no hartlap</h1>"
    ]
   },
   {
