--- a/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
@@ -930,17 +930,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [01:24<00:00, 11.77it/s]\n",
-      "100%|██████████| 1000/1000 [01:31<00:00, 10.92it/s]\n",
-      "100%|██████████| 1000/1000 [01:45<00:00,  9.45it/s]\n",
-      "100%|██████████| 1000/1000 [01:18<00:00, 12.80it/s]\n"
+      "100%|██████████| 1000/1000 [01:20<00:00, 12.43it/s]\n",
+      "100%|██████████| 1000/1000 [01:27<00:00, 11.39it/s]\n",
+      "100%|██████████| 1000/1000 [01:41<00:00,  9.88it/s]\n",
+      "100%|██████████| 1000/1000 [01:17<00:00, 12.84it/s]\n"
      ]
     }
    ],
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -1077,30 +1077,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1109,9 +1085,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 283,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [01:13<00:00, 13.57it/s]\n",
+      "100%|██████████| 1000/1000 [01:25<00:00, 11.71it/s]\n",
+      "100%|██████████| 1000/1000 [01:53<00:00,  8.82it/s]\n",
+      "100%|██████████| 1000/1000 [01:43<00:00,  9.64it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "models = np.load('data_4_assignment2/models.npy')\n",
     "mean = np.mean(models,axis=0) # for numerical stability you should subtract the mean of each element\n",
@@ -1133,10 +1120,91 @@
     "    sampler_1500numcov_pca.run_mcmc(p0, total_steps, progress=True)\n",
     "    \n",
     "    samples_emcee_1500numcov_pca = sampler_1500numcov_pca.get_chain(discard=burning_steps,flat=True)\n",
-    "    np.save('data_4_assignment3/outputs_MCMC/MCMC_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_pca'+str(N_pca), samples_emcee_1500numcov_pca)\n",
+    "    np.save('data_4_assignment3/outputs_MCMC/MCMC_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_numcov1500_pca'+str(N_pca), samples_emcee_1500numcov_pca)\n",
     "    log_prob_samples_1500numcov_pca = sampler_1500numcov_pca.get_log_prob(discard=burning_steps, flat=True)\n",
-    "    np.save('data_4_assignment3/outputs_MCMC/logp_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_pca'+str(N_pca), log_prob_samples_1500numcov_pca)\n",
+    "    np.save('data_4_assignment3/outputs_MCMC/logp_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee__numcov1500pca'+str(N_pca), log_prob_samples_1500numcov_pca)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n",
+      "Removed no burn in\n",
+      "Removed no burn in\n",
+      "Removed no burn in\n"
+     ]
+    }
+   ],
+   "source": [
+    "para_names =np.array(['omega_m', 'omega_b', 'As', 'w'])#[[0,2]]\n",
+    "param_names_latex = [r'$\\Omega_\\mathrm{m}$', r'$\\Omega_\\mathrm{b}$', r'$A_\\mathrm{s}$',r'$w$']\n",
+    "\n",
+    "parameters = np.load('data_4_assignment2/parameters.npz')\n",
+    "parameters.keys()\n",
+    "para_priors = {}\n",
+    "para_priors_low = {}\n",
+    "para_priors_up = {}\n",
+    "for name in para_names:\n",
+    "    para_priors[name] = [np.min(parameters[name]),np.max(parameters[name])]\n",
+    "    para_priors_low[name] = np.min(parameters[name])\n",
+    "    para_priors_up[name] = np.max(parameters[name])\n",
+    "\n",
+    "\n",
+    "samples_emcee_cov1500_pca100 = np.load('data_4_assignment3/outputs_MCMC/MCMC_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_numcov1500_pca100.npy')\n",
+    "samples_emcee_cov1500_pca300 = np.load('data_4_assignment3/outputs_MCMC/MCMC_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_numcov1500_pca300.npy')\n",
+    "samples_emcee_cov1500_pca600 = np.load('data_4_assignment3/outputs_MCMC/MCMC_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_numcov1500_pca600.npy')\n",
+    "samples_emcee_cov1500_pca900 = np.load('data_4_assignment3/outputs_MCMC/MCMC_s'+str(total_steps)+'_burn'+str(burning_steps)+'_walk'+str(nwalkers)+'_emcee_numcov1500_pca900.npy')\n",
+    "\n",
+    "samples_getdist_pca100 = MCSamples(samples=samples_emcee_cov1500_pca100,names = para_names, ranges = para_priors, settings={'smooth_scale_2D': 0.3, 'smooth_scale_1D': 0.3})\n",
+    "samples_getdist_pca300 = MCSamples(samples=samples_emcee_cov1500_pca300,names = para_names, ranges = para_priors, settings={'smooth_scale_2D': 0.3, 'smooth_scale_1D': 0.3})\n",
+    "samples_getdist_pca600 = MCSamples(samples=samples_emcee_cov1500_pca600,names = para_names, ranges = para_priors, settings={'smooth_scale_2D': 0.3, 'smooth_scale_1D': 0.3})\n",
+    "samples_getdist_pca900 = MCSamples(samples=samples_emcee_cov1500_pca900,names = para_names, ranges = para_priors, settings={'smooth_scale_2D': 0.3, 'smooth_scale_1D': 0.3})\n",
+    "\n",
+    "\n",
+    "colors = ['lightcoral', 'royalblue', 'orange', 'green']\n",
+    "bright = ['#4477AA', '#EE6677', '#228833', '#CCBB44', '#66CCEE', '#AA3377', '#BBBBBB']\n",
+    "retro = ['#4165c0', '#e770a2', '#5ac3be', '#696969', '#f79a1e', '#ba7dcd']\n",
+    "\n",
+    "g = plots.get_subplot_plotter(width_inch=12)\n",
+    "g.settings.axis_marker_lw = 1.0\n",
+    "g.settings.axis_marker_ls = '-'\n",
+    "g.settings.title_limit_labels = False\n",
+    "g.settings.axis_marker_color = 'k'\n",
+    "g.settings.legend_colored_text = True\n",
+    "g.settings.figure_legend_frame = False\n",
+    "g.settings.linewidth = 2.0\n",
+    "g.settings.linewidth_contour = 3.0\n",
+    "g.settings.legend_fontsize = 22\n",
+    "g.settings.axes_fontsize = 17\n",
+    "g.settings.axes_labelsize = 22\n",
+    "g.settings.axis_tick_x_rotation = 45\n",
+    "g.settings.axis_tick_max_labels = 6\n",
+    "g.settings.solid_colors = colors\n",
+    "\n",
+    "priors = parampriors.ParamBounds()\n",
+    "# priors.names = para_names\n",
+    "# priors.lower = para_priors_low\n",
+    "# priors.upper = para_priors_up\n",
+    "\n",
+    "g.triangle_plot(\n",
+    "    roots=[samples_getdist_pca100, samples_getdist_pca300, samples_getdist_pca600, samples_getdist_pca900],\n",
+    "    filled=True,\n",
+    "    legend_loc='upper right',\n",
+    "    legend_labels = ['cov1500 PCA 100','cov1500 PCA 300', 'cov1500 PCA 600', 'cov1500 PCA 900' ],\n",
+    "    title_limit=1,\n",
+    "    # upper_roots=[1,2,0],\n",
+    "    # param_limits=para_priors,\n",
+    "    markers=reference_params,\n",
+    ")\n",
+    "\n",
+    "plt.savefig('plots_4_assignment3/MCMC_corner_task3b_pca_with_numcov1500.jpg',dpi=400, bbox_inches='tight')"
    ]
   },
   {
