--- a/projects/2ptstat-analysis/assignments/assignment_MCMC.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment_MCMC.ipynb
@@ -150,7 +150,7 @@
     "## Function that computes the likelihood\n",
     "def calc_likelihood(para):\n",
     "    \n",
-    "    params = {'omega_b':reference_params['omega_b'],'w':reference_params['w']}\n",
+    "    params = {'omega_b':reference_params['omega_b'],'w':reference_params['w']} # this is fixing the two params to the references values, they are not being varied\n",
     "    for i in range(len(param_names_varying)):\n",
     "        params[param_names_varying[i]] = [para[i]]\n",
     "\n",
