--- a/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
@@ -1758,7 +1758,7 @@
     "\n",
     "Once again, we see the same trends and conclusions as determined with task 3. We repeated task 3 using now the noise-free model+analytical covariance and then the noise-free model+1.5k num covariance. We see that when using a noise-free model in tandem with the analytical covaraince the PCA analysis is even more effective. Previously it took about 600 PCA elements to match the cmax onstraining power, but now, at only 300 PCA elemetns we already obtain the same constraining power. This is also shown in the chi2-distribtuon as the distribution for PCA 300 closely matches PCA 900 (all elements used).\n",
     "\n",
-    "In the second part, we reintroduce the very noisy 1.5k numerical covariance matrix."
+    "In the second part, we reintroduce the very noisy 1.5k numerical covariance matrix. Based on the corner plot and chi2-distribution plots we make the same conclusion as before. Due to the noisiness of the num cov matrix, PCA analysis becomes ineffective. We see that even at PCA 600, the max constraining power is now reached. This is also shown in the chi2 distribution as the peak of PCA600 is still non-ngeligibly below PCA900."
    ]
   },
   {
@@ -2044,6 +2044,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Comments on 4a:\n",
+    "\n",
+    "We see that as we take more and more PCA elements the marginalized constraints on $\\Omega_{m}$ and $A_{s}$ get lower and lower. Since we are still using the noisy 1.5k num cov matrix, we see that the decreasing trend still continues all the way up to 900 PCA elements which would be the max constraints. In assignent 2, we saw that the marginalized constraints on parameters would converge faster to the max constraint and then plateau all the way to 900 PCA elements. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 4.b To check if your answer in 4.a is robust, run multiple MCMC chains with the 1.5 covariance matrix and a fixed number of PCA elements. How big are the variations on the marginalised errors on $\\Omega_\\mathrm{m}$ and $A_s$? Is your answer in 4.a reliable? What can you improve to make 4.a reliable?"
    ]
   },
@@ -2053,161 +2062,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_steps = 2000 # total  number of steps each walker is doing\n",
-    "burning_steps = 1000 # how many buring steps you want to remove\n",
-    "nwalkers = 50 # Number of walkers that probe the parameter space"
+    "total_steps = 600 # total  number of steps each walker is doing\n",
+    "burning_steps = 300 # how many buring steps you want to remove\n",
+    "nwalkers = 100 # Number of walkers that probe the parameter space"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2000/2000 [11:21<00:00,  2.93it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [10:36<00:00,  3.14it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [10:01<00:00,  3.33it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [10:16<00:00,  3.25it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [09:17<00:00,  3.59it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [11:42<00:00,  2.85it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [10:14<00:00,  3.26it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [11:23<00:00,  2.93it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [09:46<00:00,  3.41it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [11:23<00:00,  2.93it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed no burn in\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "  1%|          | 6/600 [00:04<08:00,  1.24it/s]"
      ]
     }
    ],
@@ -2236,7 +2105,7 @@
     "\n",
     "inv_cov_pca = inv(cov_pca) # select the first N_pca elements\n",
     "    \n",
-    "for i in range(10):\n",
+    "for i in range(20):\n",
     "    p0 = start_position_lh_and_step_size(i)\n",
     "    # sampler_pca_noisefree_pca, samples_emcee_pca_noisefree\n",
     "    \n",
@@ -2364,6 +2233,13 @@
    "source": [
     "plt.plot(As_std_repeated_npca, '--o')\n",
     "#plt.ylim(5.6e-11,5.625e-11)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Comments on 4b:\n"
    ]
   },
   {
