--- a/projects/2ptstat-analysis/assignments/assignment1_DarshakPatel.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment1_DarshakPatel.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "# What is the values we see in model?\n",
     "'''\n",
-    "First 20 points is w(p) in the 1,1 tomographic bin. The next 20 is int he 1,2 tomographic bin. etc.\n",
+    "First 20 points is w(p) in the 1,1 tomographic bin. The next 20 is in the 1,2 tomographic bin. etc.\n",
     "'''\n",
     "\n",
     "plt.plot(model)\n",
@@ -170,7 +170,6 @@
     "for i in range(len(noisy_data_set1)):\n",
     "    differnce = model-noisy_data_set1[i]\n",
     "    chi2_val = differnce.T @ inv_cov @ differnce\n",
-    "    \n",
     "    chi2_dataset1.append(chi2_val)\n",
     "    \n",
     "# compute the chi^2 for all dv for noisy data set2\n",
@@ -703,7 +702,7 @@
     "\n",
     "If my understanding if correct, the varaince is essentially a reflection of how big\n",
     "the posterior distribution is. A larger posterior distribution would lead to a larger\n",
-    "variance but it also increases the likelyhood that the true value is in the posterior \n",
+    "variance but it also increases the likelihood that the true value is in the posterior \n",
     "distribution.\n",
     "\n",
     "When using the Hartlap factor we need to ensure we have enough realizations (n) such that \n",
